[tool.poetry]
name = "erowid-w2v"
version = "0.1.0"
description = ""
authors = ["technillogue <wisepoison@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.4.0"
scipy = "*"
scikit-learn = "*"
zeugma = "*"
matplotlib = "*"
plotnine = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
ipython = "*"
bpython = "*"
pylint = "*"
pdbpp = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
